--- a/src/components/blocks/CampusWeatherDetail/CurrentConditions/CurrentConditions.module.scss
+++ b/src/components/blocks/CampusWeatherDetail/CurrentConditions/CurrentConditions.module.scss
@@ -1,23 +1,33 @@
 .CurrentConditionsContainer {
-	flex: 1 1;
 	display: flex;
-	flex-wrap: wrap;
-	gap: 10px;
+	flex-direction: column;
+	width: 100%;
 
-	.weatherSymbol {
+	.symbolContainer {
+		display: flex;
 		flex: 1 1 100%;
-		text-align: center;
-		margin: 0 auto;
-		max-width: 100%;
-		filter: invert(50%);
+		justify-content: center;
+		.weatherSymbol {
+			width: 100%;
+			max-width: 200px;
+			text-align: center;
+			margin: 0 auto;
+			filter: invert(100%);
+		}
 	}
-	.weatherDescription {
+	.weatherHeadlineContainer {
 		flex: 1 1 100%;
-		text-align: center;
+		.weatherDescription {
+			text-align: center;
+		}
+		.airTemperature {
+			text-align: center;
+			font-size: 36px;
+		}
 	}
-	.airTemperature {
+	.valuesContainer {
 		flex: 1 1 100%;
-		text-align: center;
-		font-size: 36px;
+		display: flex;
+		flex-direction: row;
 	}
 }
